--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <p>Test</p>
+        <p>Test. Please work.</p>
         <section class="task-list">
             <h2>Tasks</h2>
             <div id="tasks">
